--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ numpy==1.13.1
 aiohttp==2.2.5
 aiohttp_jinja2==0.14.0
 pigpio==1.3.8
+picamera==1.13
+opencv-python # compile
 # for remote dev
 pyro4==4.62
