--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,9 @@ aiohttp_jinja2==0.14.0
 pigpio==1.3.8
 picamera==1.13
 opencv-python # compile
+filterpy==1.0.0
+pyserial-asyncio==0.4
+git+https://github.com/bsdz/micropyGPS.git@master#egg=micropyGPS
 # for remote dev
 pyro4==4.62
+aiohttp-xmlrpc==0.7.3
